[iOS] allocate volume view on the main thread https://bugs.webkit.org/show_bug.cgi?id=138971 rdar://problem/18016958

Reviewed by Jer Noble.

* platform/audio/ios/MediaSessionManagerIOS.mm:
(-[WebMediaSessionHelper allocateVolumeView]): New, dispatch to the main thread if necessary before allocating
    the volume view.
(-[WebMediaSessionHelper initWithCallback:]): Call allocateVolumeView.


Canonical link: https://commits.webkit.org/156851@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176471 268f45cc-cd09-0410-ab3c-d52691b4dbfc